# mcp-scheduling

./: .gitignore  README.md  docker-compose.yml  flake.nix
agent/: eslint.config.ts  package.json  tsconfig.json
agent/benchmark-results/: 00000-00-43-10-11-29-2025.json  00001-20-05-08-12-02-2025.json
agent/scripts/: benchmark.ts  list-benchmark-accuracy.ts  list-benchmark-times.ts  summarize-benchmark.ts
agent/src/: config.ts  index.ts  utils.ts
agent/src/agent/: index.ts
agent/src/scheduler/: client.ts
agent/src/types/: dataset.ts
agent/tests/: agent.test.ts  dataset.json  validation.ts
scheduler/: .rustfmt.toml  Cargo.toml  bacon.toml
scheduler/.sqlx/: query-1eff79a14cb40c1880b1fd179edd5f2801aff73384886f5a28b0be4c431a7ecb.json  query-74dd5a2a22027d988ff8aabb6048fb58b90174c43f68d89942b6684538c1034f.json  query-79f82609490855b7bc81e871c9174f2db36b4dac497a2563815604a5fc2fa964.json  query-dec09339b4cfa9ffdabed506ae992c3f269370f9874c6bde404a734dd3eab7d5.json
scheduler/migrations/: 01_init.sql
scheduler/src/: embeddings.rs  heartbeat.rs  main.rs  metrics.rs  tool_metrics.rs  tool_registration.rs  tool_retrieval.rs  types.rs  utils.rs
tools/scrape-fast/: eslint.config.ts  index.ts  package.json
tools/scrape-slow/: eslint.config.ts  index.ts  package.json
